07/09/2013  Guillermo Gómez <guillermo.gf@openmailbox.org>
	* Added email field
	* Added option to search entries by email
	* Added (not) required fields

06/09/2013  Guillermo Gómez <guillermo.gf@openmailbox.org>
	* Changelog created. Last stable version 0.2
	* Date is DD/MM/YYYY (Day/Month/Year)