@@ -1,3 +1,7 @@
+05/01/2014  Guillermo Gómez <guillermo.gf@openmailbox.org>
+	* Created file with known bugs
+	* Added 2014 to copyright notices
+
 07/09/2013  Guillermo Gómez <guillermo.gf@openmailbox.org>
 	* Added email field
 	* Added option to search entries by email
